--- a/crud/templates/index.html
+++ b/crud/templates/index.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Real Estate Application</title>
+    <meta charset="utf-8">
+    <title>Real Estate Application-CSCE 310 Summer2023</title>
+    <style>
+        body {
+            background-color: #f2f2f2;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            margin: 0;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            background-color: #fff;
+            margin-bottom: 5px;
+            padding: 10px;
+        }
+
+        li a {
+            color: #333;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to the Real Estate Application</h1>
+    <h1>Welcome to the Real Estate Application-CSCE 310 Summer-2023</h1>
     <ul>
         <li><a href="/realestates">List of Real Estates</a></li>
         <li><a href="/customers">List of Customers</a></li>
